Level Changing and Losing

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -8,4 +8,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Levels/Amazon_dynamic_level
+GameInstanceClass=/Game/Blueprints/BP_Amazon_GameInstance.BP_Amazon_GameInstance_C
+GlobalDefaultGameMode=/Game/Blueprints/BP_Amazon_GameMode.BP_Amazon_GameMode_C
 
